solucioné problema con pagos pendientes en el dashboard de clientes